CSDEV/objects/HAE_Shortwatch__c.object
<CustomObject>
    <fields>
        <fullName>HAE_Availability_Date__c</fullName>
        <description>HAE: it is availability date of the Shortwatch List.</description>
        <label>Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HAE_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Shortwatchs</relationshipLabel>
        <relationshipName>Shortwatchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HAE_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HAE_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Shortwatch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SHW-{00000}</displayFormat>
        <label>Shortwatch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shortwatches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>